--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.3"
+    "mongoose": "^8.13.3",
+    "redis": "^4.7.0",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
